--- a/index.html
+++ b/index.html
@@ -1,60 +1,118 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Banda de Rock AC/DC</title>
+    <title>Mi pagina web</title>
     <style>
+        /* Estilo general del cuerpo */
         body {
-            background: url('imagenes/1425.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: white;
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background-image: url('imagenes/9-acdc.jpg'); /* Cambia esto por la ruta de tu imagen */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            color: #050505; /* Cambia el color del texto para que contraste con el fondo */
+            line-height: 1.6;
         }
-        header {
-            background-color: rgba(0, 0, 0, 0.8);
-            padding: 10px;
-            text-align: center;
-        }
+
+        /* Encabezados */
         h1 {
-            color: #ff0000;
+            color: #2c3e50;
+            font-size: 2.5rem;
+            text-align: center;
+            margin-bottom: 20px;
         }
-        a {
-            color: #00ffff;
-            text-decoration: none;
+
+        h3 {
+            color: #34495e;
+            font-size: 1.8rem;
+            margin-top: 15px;
         }
-        a:hover {
-            text-decoration: underline;
+
+        /* Párrafos */
+        p {
+            margin: 10px 0;
         }
-        section {
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 20px;
-            margin: 20px;
-            border-radius: 10px;
+
+        /* Negritas y cursivas */
+        b, strong {
+            color: #e74c3c;
+        }
+
+        i, em {
+            color: #2980b9;
+        }
+
+        /* Listas */
+        ol {
+            margin: 15px 0;
+            padding-left: 20px;
+        }
+
+        ol li {
+            margin-bottom: 10px;
+        }
+
+        ul {
+            margin: 15px 0;
+            padding-left: 20px;
+        }
+
+        ul li {
+            margin-bottom: 10px;
+        }
+
+        /* Texto tachado */
+        strike {
+            text-decoration: line-through;
+            color: #7f8c8d;
+        }
+
+        /* Citas */
+        cite {
+            display: block;
+            font-size: 0.9rem;
+            color: #7f8c8d;
+            margin-top: 20px;
+            text-align: right;
+            font-style: italic;
         }
     </style>
+    
 </head>
 <body>
-    <header>
-        <h1>Bienvenidos a la página de AC/DC</h1>
-    </header>
-    <section>
-        <h2>Descargas</h2>
-        <p>Para descargar un archivo en PDF, haga clic <a href="ruta/al/archivo.pdf" target="_blank">aquí</a>.</p>
-        <p>Para descargar un archivo en TXT, haga clic <a href="ruta/al/archivo.txt" target="_blank">aquí</a>.</p>
-        <p>Para descargar un archivo en DOC, haga clic <a href="ruta/al/archivo.doc" target="_blank">aquí</a>.</p>
-    </section>
-    <section>
-        <h2>Ejercicios realizados</h2>
-        <ul>
-            <li><a href="punto1.html" target="_blank">Ejercicio 1</a></li>
-            <li><a href="punto2.html" target="_blank">Ejercicio 2</a></li>
-            <li><a href="punto3.html" target="_blank">Ejercicio 3</a></li>
-            <li><a href="punto4.html" target="_blank">Ejercicio 4</a></li>
-            <li><a href="punto5.html" target="_blank">Ejercicio 5</a></li>
-        </ul>
-    </section>
+    <h1>ventajas de html y hacer una pagina web</h1>
+
+    <h3>HTML es el lenguaje de marcado estándar utilizado para crear páginas web. Algunas de las ventajas de HTML para crear páginas web incluyen</h3>
+
+    <p><b>Fácil aprender y utilizar</b> HTML es un lenguaje de marcado simple y fácil de aprender. Con un conocimiento básico de las etiquetas y la estructura del lenguaje, cualquiera puede crear una página web.</p>
+
+    <p><strong>Compatible con todos los navegadores web</strong> HTML es compatible con todos los navegadores web modernos, lo que significa que las páginas web creadas con HTML se pueden ver en cualquier dispositivo con acceso a Internet.</p>
+
+    <p><i>Flexibilidad en la creación de contenido</i> HTML proporciona una amplia variedad de etiquetas para crear diferentes tipos de contenido en una página web, desde texto y enlaces hasta imágenes y videos.</p>
+
+    <p><em>Optimización para motores de búsqueda:</em> HTML proporciona una estructura clara y organizada para el contenido de una página web, lo que facilita a los motores de búsqueda indexar y clasificar el contenido de manera eficiente.</p>
+
+    <p>Amplia disponibilidad de herramientas y recursos: Debido a su popularidad, hay una amplia gama de herramientas y recursos disponibles para ayudar a los desarrolladores a crear y mantener páginas web con HTML, desde editores de texto simples hasta software de diseño gráfico avanzado.</p>
+
+    <h5><strike>para crear una pagina web</strike> utilizando HTML Puede seguir los siguientes pasos</h5>
+  
+    <ol> 
+        <li>Planifique la estructura y el contenido de su sitio web.</li>
+        <li>Escriba el código HTML para crear la estructura de su sitio web, utilizando las etiquetas necesarias para definir los elementos y el contenido de la página.</li>
+        <li>Agregue estilos a su página web usando CSS para darle un aspecto visual atractivo.</li>
+        <li>Agregue interactividad a su página web utilizando JavaScript si es necesario.</li>
+        <li>Publique su sitio web en un servidor web para que esté disponible en línea.</li>
+    </ol>
+  
+    <cite>Una guía básica para ayudarlo a crear su propia página web utilizando HTML.</cite>
+
+    <ul>
+        <li>Planifique la estructura y el contenido de su sitio web: Decida qué contenido quiere incluir en su sitio web y cómo desea organizarlo. Haga un esquema o boceto de su página para ayudarle a visualizar cómo se verá su sitio web.</li>
+        <li>Escriba el código HTML: Use un editor de texto como Notepad o Sublime Text para escribir el código HTML de su sitio web. Asegúrese de incluir las etiquetas necesarias para definir los elementos y el contenido de la página, como <html>, <head>, <title>, etc.</li>
+    </ul>
 </body>
 </html>
